--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <section id="about" class="about">
             <div class="image">
-                <img src="carr3.jpg" alt="">
+                <a href=img src="carr3.jpg" alt="https://www.instagram.com/marchezanmetais/">
             </div>
 
             <div class="content">
                 <span>Sobre Nós</span>
-                <h3 class="title">Aqui Transformamos Ambientes e Valorizamos Pessoas!</h3>
+                <h3 class="title">VISITE NOSSO INSTAGRAM!</h3>
 
                 <div class="box-container">
                     <div class="box">
