--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <section id="about" class="about">
             <div class="image">
-                <a href=img src="carr3.jpg" alt="https://www.instagram.com/marchezanmetais/">
+                <a href="https://www.instagram.com/marchezanmetais/" class="btn">Saiba Mais
+                <img src="carr3.jpg" alt="https://www.instagram.com/marchezanmetais/">
+                </a>
             </div>
 
             <div class="content">
