--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <section id="about" class="about">
             <div class="image">
-                <a href="https://www.instagram.com/marchezanmetais/" class="btn">Saiba Mais
+                <a href="https://www.instagram.com/marchezanmetais/">
                 <img src="carr3.jpg" alt="https://www.instagram.com/marchezanmetais/">
                 </a>
             </div>
