--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="content">
                         <img src="https://cdn-icons-png.flaticon.com/512/95/95869.png" alt="">
                         <h3>CATÁLOGO DE PRODUTOS</h3>
-                        <p><a href="https://www.marchezanmetais.com.br/uploads/catalogo/1665499254.pdf">DOWNLOAD</a></p>
+                        <p><a href="https://www.marchezanmetais.com.br/uploads/catalogo/1665499254.pdf" class="custom-link">DOWNLOAD</a></p>
                     </div>
                 </div>
 
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="content">
                         <img src="https://cdn-icons-png.flaticon.com/512/129/129817.png" alt="">
                         <h3>CATÁLOGO COLOR SELECT</h3>
-                        <p><a href="https://www.marchezanmetais.com.br/color_select.pdf">DOWNLOAD</a></p>
+                        <p><a href="https://www.marchezanmetais.com.br/color_select.pdf" class="custom-link">DOWNLOAD</a></p>
                     </div>
                 </div>
 
