--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="index.html">
             <img src="logo.png" alt="Marchezan Metais" class="logo">
         </a>
+        
+        <a href="https://wa.me/SEUNUMERO" class="whatsapp-float" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+        </a>
 
         <div id="menu-btn" class="fas fa-bars"></div>
 
